@@ -13,6 +13,7 @@ package org.eclipse.sw360.spdx;
 
 import org.apache.commons.lang3.StringUtils;
 import org.eclipse.sw360.datahandler.common.SW360Constants;
+import org.eclipse.sw360.datahandler.db.DatabaseHandlerUtil;
 import org.eclipse.sw360.datahandler.thrift.*;
 import org.eclipse.sw360.datahandler.thrift.attachments.Attachment;
 import org.eclipse.sw360.datahandler.thrift.attachments.AttachmentContent;
@@ -29,23 +30,33 @@ import org.eclipse.sw360.datahandler.thrift.spdx.relationshipsbetweenspdxelement
 import org.eclipse.sw360.datahandler.thrift.spdx.snippetinformation.*;
 import org.eclipse.sw360.datahandler.thrift.spdx.spdxdocument.*;
 import org.eclipse.sw360.datahandler.thrift.spdx.spdxpackageinfo.*;
-import org.spdx.rdfparser.InvalidSPDXAnalysisException;
-import org.spdx.rdfparser.SPDXDocumentFactory;
-import org.spdx.rdfparser.model.*;
-import org.spdx.rdfparser.model.pointer.*;
-import org.spdx.rdfparser.license.ExtractedLicenseInfo;
-import org.spdx.rdfparser.SpdxPackageVerificationCode;
+import org.spdx.library.model.enumerations.RelationshipType;
+import org.spdx.library.model.license.ExtractedLicenseInfo;
+import org.spdx.library.model.license.SpdxNoAssertionLicense;
+import org.spdx.library.model.pointer.ByteOffsetPointer;
+import org.spdx.library.model.pointer.LineCharPointer;
+import org.spdx.library.model.pointer.SinglePointer;
+import org.spdx.library.model.pointer.StartEndPointer;
+import org.spdx.library.model.*;
+import org.spdx.library.InvalidSPDXAnalysisException;
+import org.spdx.tools.InvalidFileNameException;
+import org.spdx.tools.SpdxToolsHelper;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.commons.lang3.ArrayUtils;
 
+import java.io.File;
+import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 
 import static org.eclipse.sw360.datahandler.common.CommonUtils.isNotNullEmptyOrWhitespace;
+import static org.eclipse.sw360.datahandler.common.CommonUtils.isNullEmptyOrWhitespace;
 
 public class SpdxBOMImporter {
     private static final Logger log = LogManager.getLogger(SpdxBOMImporter.class);
@@ -55,138 +66,147 @@ public class SpdxBOMImporter {
         this.sink = sink;
     }
 
-    public ImportBomRequestPreparation prepareImportSpdxBOMAsRelease(InputStream inputStream, AttachmentContent attachmentContent)
-            throws InvalidSPDXAnalysisException, SW360Exception {
+    public ImportBomRequestPreparation prepareImportSpdxBOMAsRelease(File targetFile) {
         final ImportBomRequestPreparation requestPreparation = new ImportBomRequestPreparation();
-        final SpdxDocument spdxDocument = openAsSpdx(inputStream);
-        List<SpdxPackage> packages = new ArrayList<>();
+        final SpdxDocument spdxDocument = openAsSpdx(targetFile);
+        if (spdxDocument == null) {
+            requestPreparation.setRequestStatus(RequestStatus.FAILURE);
+            requestPreparation.setMessage("error-read-file");
+            return requestPreparation;
+        }
         try {
-            packages = spdxDocument.getDocumentContainer().findAllPackages();
+            final List<SpdxElement> describedPackages = spdxDocument.getDocumentDescribes().stream().collect(Collectors.toList());
+            final List<SpdxElement> packages =  describedPackages.stream()
+                    .filter(SpdxPackage.class::isInstance)
+                    .collect(Collectors.toList());
+            if (packages.isEmpty()) {
+                requestPreparation.setMessage("The provided BOM did not contain any top level packages.");
+                requestPreparation.setRequestStatus(RequestStatus.FAILURE);
+                return requestPreparation;
+            } else if (packages.size() > 1) {
+                requestPreparation.setMessage("The provided BOM file contained multiple described top level packages. This is not allowed here.");
+                requestPreparation.setRequestStatus(RequestStatus.FAILURE);
+                return requestPreparation;
+            }
+            final SpdxElement spdxElement = packages.get(0);
+            if (spdxElement instanceof SpdxPackage) {
+                final SpdxPackage spdxPackage = (SpdxPackage) spdxElement;
+                requestPreparation.setName(getValue(spdxPackage.getName()));
+                requestPreparation.setVersion(getValue(spdxPackage.getVersionInfo()));
+                requestPreparation.setRequestStatus(RequestStatus.SUCCESS);
+            } else {
+                requestPreparation.setMessage("Failed to get spdx package from the provided BOM file.");
+                requestPreparation.setRequestStatus(RequestStatus.FAILURE);
+            }
         } catch (InvalidSPDXAnalysisException e) {
-            log.error("Can not get list package from SpdxDocument");
+            requestPreparation.setRequestStatus(RequestStatus.FAILURE);
             e.printStackTrace();
-            packages = Collections.emptyList();
-        }
-        String componentsName="";
-        String releasesName="";
-        for (SpdxPackage spdxPackage: packages){
-            componentsName += spdxPackage.getName() +" , ";
-            if (spdxPackage.getVersionInfo() != null)
-                releasesName += spdxPackage.getName() + " " +spdxPackage.getVersionInfo() +" , " ;
-        }
-        componentsName = componentsName.substring(0, componentsName.length() - 2);
-        releasesName = releasesName.substring(0, releasesName.length() - 2);
-
-        final List<SpdxItem> describedPackages = Arrays.stream(spdxDocument.getDocumentDescribes())
-                .filter(item -> item instanceof SpdxPackage)
-                .collect(Collectors.toList());
-        if (describedPackages.size() == 0) {
-            requestPreparation.setMessage("The provided BOM did not contain any top level packages.");
-            requestPreparation.setRequestStatus(RequestStatus.FAILURE);
-            return requestPreparation;
-        } else if (describedPackages.size() > 1) {
-            requestPreparation.setMessage("The provided BOM file contained multiple described top level packages. This is not allowed here.");
-            requestPreparation.setRequestStatus(RequestStatus.FAILURE);
-            return requestPreparation;
-        }
-
-        final SpdxItem spdxItem = describedPackages.get(0);
-        if (spdxItem instanceof SpdxPackage) {
-            final SpdxPackage spdxPackage = (SpdxPackage) spdxItem;
-            requestPreparation.setName(componentsName);
-            requestPreparation.setVersion(releasesName);
-            requestPreparation.setRequestStatus(RequestStatus.SUCCESS);
-        } else {
-            requestPreparation.setMessage("Failed to get spdx package from the provided BOM file.");
-            requestPreparation.setRequestStatus(RequestStatus.FAILURE);
         }
         return requestPreparation;
     }
 
     public RequestSummary importSpdxBOMAsRelease(InputStream inputStream, AttachmentContent attachmentContent)
-            throws SW360Exception {
+            throws SW360Exception, IOException {
         return importSpdxBOM(inputStream, attachmentContent, SW360Constants.TYPE_RELEASE);
     }
 
+    private SpdxDocument openAsSpdx(File file){
+        try {
+            log.info("Read file: " + file.getName());
+            return SpdxToolsHelper.deserializeDocument(file);
+        } catch (InvalidSPDXAnalysisException | IOException | InvalidFileNameException e) {
+            log.error("Error read file " + file.getName() + " to SpdxDocument");
+            e.printStackTrace();
+            return null;
+        }
+    }
+
     public RequestSummary importSpdxBOMAsProject(InputStream inputStream, AttachmentContent attachmentContent)
-            throws InvalidSPDXAnalysisException, SW360Exception {
-        return importSpdxBOM(inputStream, attachmentContent, SW360Constants.TYPE_PROJECT);
+            throws SW360Exception, IOException {
+        return importSpdxBOM(attachmentContent, SW360Constants.TYPE_PROJECT , inputStream);
+    }
+
+    private RequestSummary importSpdxBOM( AttachmentContent attachmentContent, String type, InputStream inputStream)
+            throws SW360Exception, IOException {
+        return importSpdxBOM(inputStream, attachmentContent, type);
     }
 
     private RequestSummary importSpdxBOM(InputStream inputStream, AttachmentContent attachmentContent, String type)
-            throws SW360Exception {
+            throws SW360Exception, IOException {
         final RequestSummary requestSummary = new RequestSummary();
-        SpdxDocument spdxDocument = null;
-        List<SpdxItem> describedPackages = new ArrayList<>();
-        try {
-            spdxDocument = openAsSpdx(inputStream);
-            describedPackages =  Arrays.stream(spdxDocument.getDocumentDescribes())
-                    .filter(item -> item instanceof SpdxPackage)
-                    .collect(Collectors.toList());
-        } catch (InvalidSPDXAnalysisException e) {
-            log.error("Can not open file to SpdxDocument " +e);
-        }
-        if (describedPackages.size() == 0) {
-            requestSummary.setTotalAffectedElements(0);
-            requestSummary.setTotalElements(0);
-            requestSummary.setMessage("The provided BOM did not contain any top level packages.");
-            requestSummary.setRequestStatus(RequestStatus.FAILURE);
-            return requestSummary;
-        } else if (describedPackages.size() > 1) {
-            requestSummary.setTotalAffectedElements(0);
-            requestSummary.setTotalElements(0);
-            requestSummary.setMessage("The provided BOM file contained multiple described top level packages. This is not allowed here.");
-            requestSummary.setRequestStatus(RequestStatus.FAILURE);
-            return requestSummary;
-        }
-        final SpdxItem spdxItem = describedPackages.get(0);
-        final Optional<SpdxBOMImporterSink.Response> response;
-        if (SW360Constants.TYPE_PROJECT.equals(type)) {
-            response = importAsProject(spdxItem, attachmentContent);
-        } else if (SW360Constants.TYPE_RELEASE.equals(type)) {
-            response = importAsRelease(spdxItem, attachmentContent, spdxDocument);
-        } else {
-            throw new SW360Exception("Unsupported type=[" + type + "], can not import BOM");
-        }
+        List<SpdxElement> describedPackages = new ArrayList<>();
 
-        if (response.isPresent()) {
-            requestSummary.setRequestStatus(RequestStatus.SUCCESS);
-            requestSummary.setTotalAffectedElements(response.get().countAffected());
-            requestSummary.setTotalElements(response.get().count());
-            requestSummary.setMessage(response.get().getId());
-        } else {
-            requestSummary.setRequestStatus(RequestStatus.FAILURE);
-            requestSummary.setTotalAffectedElements(-1);
-            requestSummary.setTotalElements(-1);
-            requestSummary.setMessage("Failed to import the BOM as type=[" + type + "].");
+        String fileType = getFileType(attachmentContent.getFilename());
+        final String ext = "." + fileType;
+        final File sourceFile = DatabaseHandlerUtil.saveAsTempFile( inputStream, attachmentContent.getId(), ext);
+        try {
+            SpdxDocument spdxDocument = openAsSpdx(sourceFile);
+            if (spdxDocument == null) {
+                requestSummary.setRequestStatus(RequestStatus.FAILURE);
+                return requestSummary;
+            }
+            describedPackages = spdxDocument.getDocumentDescribes().stream().collect(Collectors.toList());
+            List<SpdxElement> packages = describedPackages.stream()
+                    .filter(SpdxPackage.class::isInstance)
+                    .collect(Collectors.toList());
+            if (packages.isEmpty()) {
+                requestSummary.setTotalAffectedElements(0);
+                requestSummary.setTotalElements(0);
+                requestSummary.setMessage("The provided BOM did not contain any top level packages.");
+                requestSummary.setRequestStatus(RequestStatus.FAILURE);
+                return requestSummary;
+            } else if (packages.size() > 1) {
+                requestSummary.setTotalAffectedElements(0);
+                requestSummary.setTotalElements(0);
+                requestSummary.setMessage("The provided BOM file contained multiple described top level packages. This is not allowed here.");
+                requestSummary.setRequestStatus(RequestStatus.FAILURE);
+                return requestSummary;
+            }
+
+            final SpdxPackage spdxElement = (SpdxPackage) packages.get(0);
+            final Optional<SpdxBOMImporterSink.Response> response;
+            if (SW360Constants.TYPE_PROJECT.equals(type)) {
+                response = importAsProject(spdxElement, attachmentContent);
+            } else if (SW360Constants.TYPE_RELEASE.equals(type)) {
+                response = importAsRelease(spdxElement, attachmentContent,spdxDocument);
+            } else {
+                throw new SW360Exception("Unsupported type=[" + type + "], can not import BOM");
+            }
+
+            if (response.isPresent()) {
+                requestSummary.setRequestStatus(RequestStatus.SUCCESS);
+                requestSummary.setTotalAffectedElements(response.get().countAffected());
+                requestSummary.setTotalElements(response.get().count());
+                requestSummary.setMessage(response.get().getId());
+            } else {
+                requestSummary.setRequestStatus(RequestStatus.FAILURE);
+                requestSummary.setTotalAffectedElements(-1);
+                requestSummary.setTotalElements(-1);
+                requestSummary.setMessage("Failed to import the BOM as type=[" + type + "].");
+            }
+        } catch (InvalidSPDXAnalysisException | NullPointerException e) {
+            log.error("Can not open file to SpdxDocument " +e);
         }
         return requestSummary;
     }
 
-    private SpdxDocument openAsSpdx(InputStream inputStream) throws InvalidSPDXAnalysisException {
-        String FILETYPE_SPDX_INTERNAL = "RDF/XML";
-        return SPDXDocumentFactory
-                .createSpdxDocument(inputStream,
-                        "http://localhost/",
-                        FILETYPE_SPDX_INTERNAL);
-    }
-
-    private Component createComponentFromSpdxPackage(SpdxPackage spdxPackage) {
+    private Component createComponentFromSpdxPackage(SpdxPackage spdxPackage) throws InvalidSPDXAnalysisException {
         final Component component = new Component();
-        final String name = spdxPackage.getName();
+        String name = "";
+        name = getValue(spdxPackage.getName());
         component.setName(name);
         return component;
     }
 
-    private SpdxBOMImporterSink.Response importAsComponent(SpdxPackage spdxPackage) throws SW360Exception {
+    private SpdxBOMImporterSink.Response importAsComponent(SpdxPackage spdxPackage) throws SW360Exception, InvalidSPDXAnalysisException {
         final Component component = createComponentFromSpdxPackage(spdxPackage);
         return sink.addComponent(component);
     }
 
-    private Release createReleaseFromSpdxPackage(SpdxPackage spdxPackage) {
+    private Release createReleaseFromSpdxPackage(SpdxPackage spdxPackage) throws InvalidSPDXAnalysisException {
         final Release release = new Release();
-        final String name = spdxPackage.getName();
-        final String version = spdxPackage.getVersionInfo();
+        final String name = getValue(spdxPackage.getName());
+        final String version = getValue(spdxPackage.getVersionInfo());
         release.setName(name);
         release.setVersion(version);
         return release;
@@ -196,20 +216,24 @@ public class SpdxBOMImporter {
         final SPDXDocument doc = getSpdxDocumentFromRelease(releaseId);
         doc.setReleaseId(releaseId);
         try {
-            final SpdxSnippet[] spdxSnippets = spdxDocument.getDocumentContainer().findAllSnippets().toArray(new SpdxSnippet[0]);
-            final Relationship[] spdxRelationships = spdxDocument.getRelationships();
-            final Annotation[] spdxAnnotations = spdxDocument.getAnnotations();
-            final ExtractedLicenseInfo[] extractedLicenseInfos = spdxDocument.getExtractedLicenseInfos();
 
-            final Set<SnippetInformation> snippetInfos = createSnippetsFromSpdxSnippets(spdxSnippets);
+            List<SpdxSnippet> spdxSnippets = (List<SpdxSnippet>) SpdxModelFactory.getElements(spdxDocument.getModelStore(), spdxDocument.getDocumentUri(), null, SpdxSnippet.class).collect(Collectors.toList());
+            if (spdxSnippets.size() != 0) {
+                final Set<SnippetInformation> snippetInfos = createSnippetsFromSpdxSnippets(spdxSnippets);
+                doc.setSnippets(snippetInfos);
+            }
+
+            final List<Relationship> spdxRelationships = spdxDocument.getRelationships().stream().collect(Collectors.toList());
+            final List<Annotation> spdxAnnotations = List.copyOf(spdxDocument.getAnnotations());
+            final List<ExtractedLicenseInfo> extractedLicenseInfos = List.copyOf(spdxDocument.getExtractedLicenseInfos());
+
             final Set<RelationshipsBetweenSPDXElements> relationships = createRelationshipsFromSpdxRelationships(spdxRelationships, spdxDocument.getId());
             final Set<Annotations> annotations = createAnnotationsFromSpdxAnnotations(spdxAnnotations);
             final Set<OtherLicensingInformationDetected> otherLicenses = createOtherLicensesFromSpdxExtractedLicenses(extractedLicenseInfos);
 
-            doc.setSnippets(snippetInfos)
-                .setRelationships(relationships)
-                .setAnnotations(annotations)
-                .setOtherLicensingInformationDetecteds(otherLicenses);
+            doc.setRelationships(relationships)
+                    .setAnnotations(annotations)
+                    .setOtherLicensingInformationDetecteds(otherLicenses);
         } catch (InvalidSPDXAnalysisException e) {
             log.error(e);
         }
@@ -217,22 +241,22 @@ public class SpdxBOMImporter {
         return doc;
     }
 
-    private Set<Annotations> createAnnotationsFromSpdxAnnotations(Annotation[] spdxAnnotations) {
-        Set<Annotations> annotations = new HashSet<Annotations>();
+    private Set<Annotations> createAnnotationsFromSpdxAnnotations(List<Annotation> spdxAnnotations) throws InvalidSPDXAnalysisException {
+        Set<Annotations> annotations = new HashSet<>();
         int index = 0;
 
         for(Annotation spdxAnn : spdxAnnotations) {
             String annotator = spdxAnn.getAnnotator();
             String date = spdxAnn.getAnnotationDate();
-            String type = spdxAnn.getAnnotationTypeTag();
+            String type = spdxAnn.getAnnotationType().name();
             String comment = spdxAnn.getComment();
 
             Annotations ann = new Annotations();
             ann.setAnnotator(verifyOrSetDefault(annotator))
-                .setAnnotationDate(verifyOrSetDefault(date))
-                .setAnnotationType(verifyOrSetDefault(type))
-                .setAnnotationComment(verifyOrSetDefault(comment))
-                .setIndex(index);
+                    .setAnnotationDate(verifyOrSetDefault(date))
+                    .setAnnotationType(verifyOrSetDefault(type))
+                    .setAnnotationComment(verifyOrSetDefault(comment))
+                    .setIndex(index);
 
             annotations.add(ann);
             index++;
@@ -241,8 +265,8 @@ public class SpdxBOMImporter {
         return annotations;
     }
 
-    private Set<SnippetInformation> createSnippetsFromSpdxSnippets(SpdxSnippet[] spdxSnippets) {
-        Set<SnippetInformation> snippets = new HashSet<SnippetInformation>();
+    private Set<SnippetInformation> createSnippetsFromSpdxSnippets(List<SpdxSnippet> spdxSnippets) {
+        Set<SnippetInformation> snippets = new HashSet<>();
         int index = 0;
 
         try {
@@ -251,13 +275,13 @@ public class SpdxBOMImporter {
                 String snippetFromFile = spdxSnippet.getSnippetFromFile().getId();
                 Set<SnippetRange> ranges = createSnippetRangesFromSpdxSnippet(spdxSnippet);
                 String licenseConcluded = spdxSnippet.getLicenseConcluded().toString();
-                Set<String> licenseInfoInFile = Arrays.stream(spdxSnippet.getLicenseInfoFromFiles())
-                                            .map(license -> verifyOrSetDefault(license.toString()))
-                                            .collect(Collectors.toSet());
-                String licenseComment = spdxSnippet.getLicenseComment();
+                Set<String> licenseInfoInFile = spdxSnippet.getLicenseInfoFromFiles().stream()
+                        .map(license -> verifyOrSetDefault(license.getId()))
+                        .collect(Collectors.toSet());
+                String licenseComment = getValue(spdxSnippet.getLicenseComments());
                 String copyrightText = spdxSnippet.getCopyrightText();
-                String comment = spdxSnippet.getComment();
-                String name = spdxSnippet.getName();
+                String comment = getValue(spdxSnippet.getComment());
+                String name = getValue(spdxSnippet.getName());
                 String attributionText = String.join("|", spdxSnippet.getAttributionText());
 
                 SnippetInformation snippet = new SnippetInformation();
@@ -293,19 +317,21 @@ public class SpdxBOMImporter {
                 .setReference(spdxByteRange.getStartPointer().getReference().getId())
                 .setIndex(0);
 
-        StartEndPointer spdxLineRange = spdxSnippet.getLineRange();
-        String[] lineRanges = rangeToStrs(spdxLineRange);
-        SnippetRange snippetLineRange = new SnippetRange();
-        snippetLineRange.setRangeType("LINE")
-                .setStartPointer(lineRanges[0])
-                .setEndPointer(lineRanges[1])
-                .setReference(spdxLineRange.getStartPointer().getReference().getId())
-                .setIndex(1);
-
-        return new HashSet<SnippetRange>(Arrays.asList(snippetByteRange, snippetLineRange));
+        Optional<StartEndPointer> spdxLineRange = spdxSnippet.getLineRange();
+        if (spdxLineRange.isPresent()) {
+            String[] lineRanges = rangeToStrs(spdxLineRange.get());
+            SnippetRange snippetLineRange = new SnippetRange();
+            snippetLineRange.setRangeType("LINE")
+                    .setStartPointer(lineRanges[0])
+                    .setEndPointer(lineRanges[1])
+                    .setReference(spdxLineRange.get().getStartPointer().getReference().getId())
+                    .setIndex(1);
+            return new HashSet<>(Arrays.asList(snippetByteRange, snippetLineRange));
+        }
+        return new HashSet<>(Arrays.asList(snippetByteRange));
     }
 
-    // refer to rangeToStr function of spdx-tools
+    // Refer to rangeToStr function of spdx-tools
     private String[] rangeToStrs(StartEndPointer rangePointer) throws InvalidSPDXAnalysisException {
         SinglePointer startPointer = rangePointer.getStartPointer();
         if (startPointer == null) {
@@ -336,22 +362,23 @@ public class SpdxBOMImporter {
         return new String[] { start, end };
     }
 
-    private Set<RelationshipsBetweenSPDXElements> createRelationshipsFromSpdxRelationships(Relationship[] spdxRelationships, String spdxElementId) {
-        Set<RelationshipsBetweenSPDXElements> relationships = new HashSet<RelationshipsBetweenSPDXElements>();
+    private Set<RelationshipsBetweenSPDXElements> createRelationshipsFromSpdxRelationships(List<Relationship> spdxRelationships, String spdxElementId) throws InvalidSPDXAnalysisException {
+        Set<RelationshipsBetweenSPDXElements> relationships = new HashSet<>();
         int index = 0;
 
         for (Relationship spdxRelationship : spdxRelationships) {
-            if (!(spdxRelationship.getRelatedSpdxElement() instanceof SpdxFile)) {
-                String type = spdxRelationship.getRelationshipType().toTag();
-                String relatedSpdxElement = spdxRelationship.getRelatedSpdxElement().getId();
-                String comment = spdxRelationship.getComment();
+            Optional<SpdxElement> relatedSpdxElement = spdxRelationship.getRelatedSpdxElement();
+            if (relatedSpdxElement.isPresent() && !(relatedSpdxElement.get() instanceof SpdxFile)) {
+                String type = spdxRelationship.getRelationshipType().name();
+                String relatedSpdxElementId = relatedSpdxElement.get().getId();
+                String comment = getValue(spdxRelationship.getComment());
 
                 RelationshipsBetweenSPDXElements relationship = new RelationshipsBetweenSPDXElements();
                 relationship.setSpdxElementId(verifyOrSetDefault(spdxElementId))
-                            .setRelationshipType(verifyOrSetDefault(type))
-                            .setRelatedSpdxElement(verifyOrSetDefault(relatedSpdxElement))
-                            .setRelationshipComment(verifyOrSetDefault(comment))
-                            .setIndex(index);
+                        .setRelationshipType(verifyOrSetDefault(type))
+                        .setRelatedSpdxElement(verifyOrSetDefault(relatedSpdxElementId))
+                        .setRelationshipComment(verifyOrSetDefault(comment))
+                        .setIndex(index);
 
                 relationships.add(relationship);
                 index++;
@@ -361,24 +388,24 @@ public class SpdxBOMImporter {
         return relationships;
     }
 
-    private Set<OtherLicensingInformationDetected> createOtherLicensesFromSpdxExtractedLicenses(ExtractedLicenseInfo[] spdxExtractedLicenses) {
-        Set<OtherLicensingInformationDetected> otherLicenses = new HashSet<OtherLicensingInformationDetected>();
+    private Set<OtherLicensingInformationDetected> createOtherLicensesFromSpdxExtractedLicenses(List<ExtractedLicenseInfo> spdxExtractedLicenses) throws InvalidSPDXAnalysisException {
+        Set<OtherLicensingInformationDetected> otherLicenses = new HashSet<>();
         int index = 0;
 
         for (ExtractedLicenseInfo spdxExtractedLicense : spdxExtractedLicenses) {
             String licenseId = spdxExtractedLicense.getLicenseId();
             String extractedText = spdxExtractedLicense.getExtractedText();
             String name = spdxExtractedLicense.getName();
-            Set<String> crossRef = new HashSet<String>(Arrays.asList(verifyOrSetDefault(spdxExtractedLicense.getCrossRef())));
+            Set<String> crossRef = new HashSet<>(Arrays.asList(verifyOrSetDefault(spdxExtractedLicense.getCrossRef().toArray(new String[spdxExtractedLicense.getCrossRef().size()]))));
             String comment = spdxExtractedLicense.getComment();
 
             OtherLicensingInformationDetected otherLicense = new OtherLicensingInformationDetected();
             otherLicense.setLicenseId(verifyOrSetDefault(licenseId))
-                        .setExtractedText(verifyOrSetDefault(extractedText))
-                        .setLicenseName(verifyOrSetDefault(name))
-                        .setLicenseCrossRefs(crossRef)
-                        .setLicenseComment(verifyOrSetDefault(comment))
-                        .setIndex(index);
+                    .setExtractedText(verifyOrSetDefault(extractedText))
+                    .setLicenseName(verifyOrSetDefault(name))
+                    .setLicenseCrossRefs(crossRef)
+                    .setLicenseComment(verifyOrSetDefault(comment))
+                    .setIndex(index);
 
             otherLicenses.add(otherLicense);
             index++;
@@ -395,26 +422,26 @@ public class SpdxBOMImporter {
             final String spdxVersion = spdxDocument.getSpecVersion();
             final String dataLicense = spdxDocument.getDataLicense().toString();
             final String spdxId = spdxDocument.getId();
-            final String name = spdxDocument.getName();
-            final String documentNamespace = spdxDocument.getDocumentContainer().getDocumentNamespace();
+            final String name = getValue(spdxDocument.getName());
+            final String documentNamespace = spdxDocument.getDocumentUri();
             final Set<ExternalDocumentReferences> refs = createExternalDocumentRefsFromSpdxDocument(spdxDocument);
-            final String licenseListVersion = spdxDocument.getCreationInfo().getLicenseListVersion();
+            final String licenseListVersion = getValue(spdxDocument.getCreationInfo().getLicenseListVersion());
             final Set<Creator> creators = createCreatorFromSpdxDocument(spdxDocument);
             final String createdDate = spdxDocument.getCreationInfo().getCreated();
-            final String creatorComment = spdxDocument.getCreationInfo().getComment();
-            final String documentComment = spdxDocument.getDocumentComment();
+            final String creatorComment = getValue(spdxDocument.getCreationInfo().getComment());
+            final String documentComment = getValue(spdxDocument.getComment());
 
             info.setSpdxVersion(verifyOrSetDefault(spdxVersion))
-                .setDataLicense(verifyOrSetDefault(dataLicense))
-                .setSPDXID(verifyOrSetDefault(spdxId))
-                .setName(verifyOrSetDefault(name))
-                .setDocumentNamespace(verifyOrSetDefault(documentNamespace))
-                .setExternalDocumentRefs(refs)
-                .setLicenseListVersion(verifyOrSetDefault(licenseListVersion))
-                .setCreator(creators)
-                .setCreated(verifyOrSetDefault(createdDate))
-                .setCreatorComment(verifyOrSetDefault(creatorComment))
-                .setDocumentComment(verifyOrSetDefault(documentComment));
+                    .setDataLicense(verifyOrSetDefault(dataLicense))
+                    .setSPDXID(verifyOrSetDefault(spdxId))
+                    .setName(verifyOrSetDefault(name))
+                    .setDocumentNamespace(verifyOrSetDefault(documentNamespace))
+                    .setExternalDocumentRefs(refs)
+                    .setLicenseListVersion(verifyOrSetDefault(licenseListVersion))
+                    .setCreator(creators)
+                    .setCreated(verifyOrSetDefault(createdDate))
+                    .setCreatorComment(verifyOrSetDefault(creatorComment))
+                    .setDocumentComment(verifyOrSetDefault(documentComment));
         } catch (InvalidSPDXAnalysisException e) {
             log.error(e);
         }
@@ -423,29 +450,30 @@ public class SpdxBOMImporter {
     }
 
     private Set<ExternalDocumentReferences> createExternalDocumentRefsFromSpdxDocument(SpdxDocument spdxDocument) {
-        Set<ExternalDocumentReferences> refs = new HashSet<ExternalDocumentReferences>();
+        Set<ExternalDocumentReferences> refs = new HashSet<>();
         int index = 0;
 
         try {
-            ExternalDocumentRef[] externalDocumentRefs = spdxDocument.getDocumentContainer().getExternalDocumentRefs();
+            List<ExternalDocumentRef> externalDocumentRefs = List.copyOf(spdxDocument.getExternalDocumentRefs());
 
             for (ExternalDocumentRef externalDocumentRef : externalDocumentRefs) {
-                Checksum spdxChecksum = externalDocumentRef.getChecksum();
+                Optional<Checksum> spdxChecksum = externalDocumentRef.getChecksum();
+                if (spdxChecksum.isPresent()) {
+                    String externalDocumentId = externalDocumentRef.getId();
+                    String spdxDocumentNamespace = externalDocumentRef.getSpdxDocumentNamespace();
+                    CheckSum checksum = new CheckSum();
+                    checksum.setAlgorithm(spdxChecksum.get().getAlgorithm().name())
+                            .setChecksumValue(spdxChecksum.get().getValue());
 
-                String externalDocumentId = externalDocumentRef.getExternalDocumentId();
-                String spdxDocumentNamespace = externalDocumentRef.getSpdxDocumentNamespace();
-                CheckSum checksum = new CheckSum();
-                checksum.setAlgorithm(org.spdx.rdfparser.model.Checksum.CHECKSUM_ALGORITHM_TO_TAG.get(spdxChecksum.getAlgorithm()).replace(":", ""))
-                        .setChecksumValue(spdxChecksum.getValue());
+                    ExternalDocumentReferences ref = new ExternalDocumentReferences();
+                    ref.setExternalDocumentId(verifyOrSetDefault(externalDocumentId))
+                            .setChecksum(checksum)
+                            .setSpdxDocument(verifyOrSetDefault(spdxDocumentNamespace))
+                            .setIndex(index);
 
-                ExternalDocumentReferences ref = new ExternalDocumentReferences();
-                ref.setExternalDocumentId(verifyOrSetDefault(externalDocumentId))
-                    .setChecksum(checksum)
-                    .setSpdxDocument(verifyOrSetDefault(spdxDocumentNamespace))
-                    .setIndex(index);
-
-                refs.add(ref);
-                index++;
+                    refs.add(ref);
+                    index++;
+                }
             }
         } catch (InvalidSPDXAnalysisException e) {
             log.error(e);
@@ -455,11 +483,11 @@ public class SpdxBOMImporter {
     }
 
     private Set<Creator> createCreatorFromSpdxDocument(SpdxDocument spdxDocument) {
-        Set<Creator> creators = new HashSet<Creator>();
+        Set<Creator> creators = new HashSet<>();
         int index = 0;
 
         try {
-            String[] spdxCreators = spdxDocument.getCreationInfo().getCreators();
+            List<String> spdxCreators = List.copyOf(spdxDocument.getCreationInfo().getCreators());
 
             for (String spdxCreator : spdxCreators) {
                 String[] data = spdxCreator.split(":");
@@ -485,13 +513,18 @@ public class SpdxBOMImporter {
         return creators;
     }
 
-    private PackageInformation createPackageInfoFromSpdxPackage(String spdxDocId, SpdxPackage spdxPackage) throws SW360Exception, MalformedURLException {
+    private PackageInformation createPackageInfoFromSpdxPackage(String spdxDocId, SpdxPackage spdxPackage) throws SW360Exception, MalformedURLException, InvalidSPDXAnalysisException {
+        Optional<String> packageName = spdxPackage.getName();
+        if (!packageName.isPresent()) {
+            return null;
+        }
+
         PackageVerificationCode PVC = new PackageVerificationCode();
         try {
             PVC = createPVCFromSpdxPackage(spdxPackage);
         } catch (NullPointerException e) {
             PVC.setExcludedFiles(Collections.emptySet())
-                .setValue(verifyOrSetDefault(""));
+                    .setValue(verifyOrSetDefault(""));
             log.error("Can not get PVC " + e);
         }
 
@@ -518,60 +551,66 @@ public class SpdxBOMImporter {
             externalRefs = Collections.emptySet();
         }
 
-        PackageInformation pInfo = getPackageInformationFromSpdxDocument(spdxDocId, spdxPackage.getName());
+        PackageInformation pInfo = getPackageInformationFromSpdxDocument(spdxDocId, packageName.get());
         pInfo.setSpdxDocumentId(spdxDocId);
 
         try {
-            final String name = spdxPackage.getName();
+            final String name = getValue(spdxPackage.getName());
             final String spdxId = spdxPackage.getId();
-            final String versionInfo = spdxPackage.getVersionInfo();
-            final String packageFileName = spdxPackage.getPackageFileName();
-            final String supplier = spdxPackage.getSupplier();
-            final String originator = spdxPackage.getOriginator();
-            final String downloadLocation = spdxPackage.getDownloadLocation();
+            final String versionInfo = getValue(spdxPackage.getVersionInfo());
+            final String packageFileName = getValue(spdxPackage.getPackageFileName());
+            final String supplier = getValue(spdxPackage.getSupplier());
+            final String originator = getValue(spdxPackage.getOriginator());
+            final String downloadLocation = getValue(spdxPackage.getDownloadLocation());
             final boolean fileAnalyzed = spdxPackage.isFilesAnalyzed();
-            final String homepage = spdxPackage.getHomepage();
-            final String sourceInfo = spdxPackage.getSourceInfo();
+            final String homepage = getValue(spdxPackage.getHomepage());
+            final String sourceInfo = getValue(spdxPackage.getSourceInfo());
+
+
             String licenseConcluded="";
             if(spdxPackage.getLicenseConcluded() != null){
                 licenseConcluded = spdxPackage.getLicenseConcluded().toString();
             }
-            final Set<String> licenseInfosFromFiles = Arrays.stream(spdxPackage.getLicenseInfoFromFiles())
-                                                        .map(license -> license.toString())
-                                                        .collect(Collectors.toSet());
-            final String licenseComment = spdxPackage.getLicenseComment();
+//            final Set<String> licenseInfosFromFiles = Arrays.stream(spdxPackage.getLicenseInfoFromFiles())
+//                    .map(license -> license.toString())
+//                    .collect(Collectors.toSet());
+//            final String licenseConcluded = spdxPackage.getLicenseConcluded().toString();
+            final Set<String> licenseInfosFromFiles = spdxPackage.getLicenseInfoFromFiles().stream()
+                    .map(license -> license.toString())
+                    .collect(Collectors.toSet());
+            final String licenseComment = getValue(spdxPackage.getLicenseComments());
             final String copyrightText = spdxPackage.getCopyrightText();
-            final String summary = spdxPackage.getSummary();
-            final String description = spdxPackage.getDescription();
-            final String comment = spdxPackage.getComment();
-            final Set<String> attributionText = new HashSet<String>(Arrays.asList(verifyOrSetDefault(spdxPackage.getAttributionText())));
-            final Set<Annotations> annotations = createAnnotationsFromSpdxAnnotations(spdxPackage.getAnnotations());
+            final String summary = getValue(spdxPackage.getSummary());
+            final String description = getValue(spdxPackage.getDescription());
+            final String comment = getValue(spdxPackage.getComment());
+            final Set<String> attributionText = new HashSet<>(Arrays.asList(verifyOrSetDefault(spdxPackage.getAttributionText().toArray(new String [spdxPackage.getAttributionText().size()]))));
+            final Set<Annotations> annotations = createAnnotationsFromSpdxAnnotations(List.copyOf(spdxPackage.getAnnotations()));
 
             pInfo.setName(verifyOrSetDefault(name))
-                .setSPDXID(verifyOrSetDefault(spdxId))
-                .setVersionInfo(verifyOrSetDefault(versionInfo))
-                .setPackageFileName(verifyOrSetDefault(packageFileName))
-                .setSupplier(verifyOrSetDefault(supplier))
-                .setOriginator(verifyOrSetDefault(originator))
-                .setDownloadLocation(verifyOrSetDefault(downloadLocation))
-                .setFilesAnalyzed(fileAnalyzed)
-                .setPackageVerificationCode(PVC)
-                .setChecksums(checksums)
-                .setHomepage(verifyOrSetDefault(homepage))
-                .setSourceInfo(verifyOrSetDefault(sourceInfo))
-                .setLicenseConcluded(verifyOrSetDefault(licenseConcluded))
-                .setLicenseInfoFromFiles(licenseInfosFromFiles)
-                .setLicenseDeclared(verifyOrSetDefault(licenseDeclared))
-                .setLicenseComments(verifyOrSetDefault(licenseComment))
-                .setCopyrightText(verifyOrSetDefault(copyrightText))
-                .setSummary(verifyOrSetDefault(summary))
-                .setDescription(verifyOrSetDefault(description))
-                .setPackageComment(verifyOrSetDefault(comment))
-                .setExternalRefs(externalRefs)
-                .setAttributionText(attributionText)
-                .setAnnotations(annotations);
+                    .setSPDXID(verifyOrSetDefault(spdxId))
+                    .setVersionInfo(verifyOrSetDefault(versionInfo))
+                    .setPackageFileName(verifyOrSetDefault(packageFileName))
+                    .setSupplier(verifyOrSetDefault(supplier))
+                    .setOriginator(verifyOrSetDefault(originator))
+                    .setDownloadLocation(verifyOrSetDefault(downloadLocation))
+                    .setFilesAnalyzed(fileAnalyzed)
+                    .setPackageVerificationCode(PVC)
+                    .setChecksums(checksums)
+                    .setHomepage(verifyOrSetDefault(homepage))
+                    .setSourceInfo(verifyOrSetDefault(sourceInfo))
+                    .setLicenseConcluded(verifyOrSetDefault(licenseConcluded))
+                    .setLicenseInfoFromFiles(licenseInfosFromFiles)
+                    .setLicenseDeclared(verifyOrSetDefault(licenseDeclared))
+                    .setLicenseComments(verifyOrSetDefault(licenseComment))
+                    .setCopyrightText(verifyOrSetDefault(copyrightText))
+                    .setSummary(verifyOrSetDefault(summary))
+                    .setDescription(verifyOrSetDefault(description))
+                    .setPackageComment(verifyOrSetDefault(comment))
+                    .setExternalRefs(externalRefs)
+                    .setAttributionText(attributionText)
+                    .setAnnotations(annotations);
         } catch (InvalidSPDXAnalysisException e) {
-            log.error("createPackageInfoFromSpdxPackage error " + e);
+            log.error("Create Package Info From SpdxPackage error " + e);
         }
 
         return pInfo;
@@ -580,37 +619,43 @@ public class SpdxBOMImporter {
     private PackageVerificationCode createPVCFromSpdxPackage(SpdxPackage spdxPackage) {
         try {
             PackageVerificationCode PVC = new PackageVerificationCode();
-            SpdxPackageVerificationCode spdxPVC = spdxPackage.getPackageVerificationCode();
-            Set<String> excludedFileNames = new HashSet<String>(Arrays.asList(verifyOrSetDefault(spdxPVC.getExcludedFileNames())));
-            String value = spdxPVC.getValue();
-
+            Optional<SpdxPackageVerificationCode> spdxPVC = spdxPackage.getPackageVerificationCode();
+            String value="";
+            Set<String> excludedFileNames=new HashSet<>();
+            if(!spdxPVC.isEmpty()) {
+                value = spdxPVC.get().getValue();
+                excludedFileNames = new HashSet<String>(Arrays.asList(verifyOrSetDefault(spdxPVC.get().getExcludedFileNames().toString())));
+            }
             PVC.setExcludedFiles(excludedFileNames)
-                .setValue(verifyOrSetDefault(value));
+                    .setValue(verifyOrSetDefault(value));
             return PVC;
-        } catch (InvalidSPDXAnalysisException e) {
+
+
+
+        } catch (InvalidSPDXAnalysisException | NullPointerException e) {
             log.error("Error get PVC " + e);
             return null;
         }
     }
 
     private Set<ExternalReference> createExternalReferenceFromSpdxPackage(SpdxPackage spdxPackage) {
-        Set<ExternalReference> refs = new HashSet<ExternalReference>();
+        Set<ExternalReference> refs = new HashSet<>();
         int index = 0;
 
         try {
-            ExternalRef[] spdxExternalRefs = spdxPackage.getExternalRefs();
+            List<ExternalRef> spdxExternalRefs = List.copyOf(spdxPackage.getExternalRefs());
             for (ExternalRef spdxRef : spdxExternalRefs) {
-                String category = spdxRef.getReferenceCategory().getTag();
+                String category = spdxRef.getReferenceCategory().name();
                 String locator = spdxRef.getReferenceLocator();
-                String type = spdxRef.getReferenceType().toString();
-                String comment = spdxRef.getComment();
+                String type = spdxRef.getReferenceType().getIndividualURI();
+                String comment = getValue(spdxRef.getComment());
 
                 ExternalReference ref = new ExternalReference();
                 ref.setReferenceCategory(verifyOrSetDefault(category))
-                    .setReferenceLocator(verifyOrSetDefault(locator))
-                    .setReferenceType(verifyOrSetDefault(type))
-                    .setComment(verifyOrSetDefault(comment))
-                    .setIndex(index);
+                        .setReferenceLocator(verifyOrSetDefault(locator))
+                        .setReferenceType(verifyOrSetDefault(type))
+                        .setComment(verifyOrSetDefault(comment))
+                        .setIndex(index);
 
                 refs.add(ref);
                 index++;
@@ -623,12 +668,12 @@ public class SpdxBOMImporter {
     }
 
     private Set<CheckSum> createCheckSumsFromSpdxChecksums(SpdxPackage spdxPackage) {
-        Set<CheckSum> checksums = new HashSet<CheckSum>();
+        Set<CheckSum> checksums = new HashSet<>();
         int index = 0;
         try {
-            Checksum[] spdxChecksums = spdxPackage.getChecksums();
+            List<Checksum> spdxChecksums = List.copyOf(spdxPackage.getChecksums());
             for (Checksum spdxChecksum : spdxChecksums) {
-                String algorithm = org.spdx.rdfparser.model.Checksum.CHECKSUM_ALGORITHM_TO_TAG.get(spdxChecksum.getAlgorithm()).replace(":", "");
+                String algorithm = spdxChecksum.getAlgorithm().name();
                 String value = spdxChecksum.getValue();
                 CheckSum checksum = new CheckSum();
                 checksum.setAlgorithm(verifyOrSetDefault(algorithm))
@@ -637,7 +682,7 @@ public class SpdxBOMImporter {
                 checksums.add(checksum);
                 index++;
             }
-        } catch (InvalidSPDXAnalysisException e) {
+        } catch (InvalidSPDXAnalysisException | NullPointerException e) {
             checksums = Collections.emptySet();
         }
         return checksums;
@@ -645,7 +690,11 @@ public class SpdxBOMImporter {
 
     private String createLicenseDeclaredFromSpdxLicenseDeclared(SpdxPackage spdxPackage) {
         try {
-            return spdxPackage.getLicenseDeclared().toString();
+//            if(isNullEmptyOrWhitespace(spdxPackage.getLicenseDeclared().toString()))
+            if(!spdxPackage.getLicenseDeclared().equals(new SpdxNoAssertionLicense(spdxPackage.getModelStore(),spdxPackage.getDocumentUri()))) {
+                return spdxPackage.getLicenseDeclared().toString();
+            }
+            return null;
         } catch (InvalidSPDXAnalysisException e) {
             log.error("Can not get licenseDeclared " + e);
         }
@@ -663,22 +712,24 @@ public class SpdxBOMImporter {
         return attachment;
     }
 
-    private Optional<SpdxBOMImporterSink.Response> importAsRelease(SpdxElement relatedSpdxElement) throws SW360Exception {
-        return importAsRelease(relatedSpdxElement, null, null);
+    private Optional<SpdxBOMImporterSink.Response> importAsRelease(SpdxElement relatedSpdxElement) throws SW360Exception, InvalidSPDXAnalysisException {
+        return importAsRelease(relatedSpdxElement, null,null);
     }
 
-    private Optional<SpdxBOMImporterSink.Response> importAsRelease(SpdxElement relatedSpdxElement, AttachmentContent attachmentContent,
-            SpdxDocument spdxDocument) throws SW360Exception {
+    private Optional<SpdxBOMImporterSink.Response> importAsRelease(SpdxElement relatedSpdxElement, AttachmentContent attachmentContent, SpdxDocument spdxDocument
+    ) throws SW360Exception, InvalidSPDXAnalysisException {
         if (relatedSpdxElement instanceof SpdxPackage) {
             final SpdxPackage spdxPackage = (SpdxPackage) relatedSpdxElement;
+            final Release release;
+            SpdxBOMImporterSink.Response component;
 
-            SpdxBOMImporterSink.Response component = importAsComponent(spdxPackage);
+            component = importAsComponent(spdxPackage);
             final String componentId = component.getId();
 
-            final Release release = createReleaseFromSpdxPackage(spdxPackage);
+            release = createReleaseFromSpdxPackage(spdxPackage);
             release.setComponentId(componentId);
 
-            final Relationship[] relationships = spdxPackage.getRelationships();
+            final Relationship[] relationships = spdxPackage.getRelationships().toArray(new Relationship[spdxPackage.getRelationships().size()]);
             List<SpdxBOMImporterSink.Response> releases = importAsReleases(relationships);
             Map<String, ReleaseRelationship> releaseIdToRelationship = makeReleaseIdToRelationship(releases);
             release.setReleaseIdToRelationship(releaseIdToRelationship);
@@ -687,11 +738,11 @@ public class SpdxBOMImporter {
                 Attachment attachment = makeAttachmentFromContent(attachmentContent);
                 release.setAttachments(Collections.singleton(attachment));
             }
+
             final SpdxBOMImporterSink.Response response = sink.addRelease(release);
 
-            if(spdxDocument != null){
+            if(spdxDocument != null) {
                 importAsReleaseFromSpdxDocument(getPackages(spdxDocument),attachmentContent);
-
                 try {
                     importSpdxDocument(response.getId(), spdxDocument, spdxPackage);
                 } catch (MalformedURLException e) {
@@ -706,58 +757,62 @@ public class SpdxBOMImporter {
         }
     }
 
-    private List<SpdxPackage> getPackages(SpdxDocument spdxDocument){
-        List<SpdxPackage> packages=new ArrayList<>();
-        try {
-            packages = spdxDocument.getDocumentContainer().findAllPackages();
-        } catch (InvalidSPDXAnalysisException e) {
-            log.error("Can not get list package from SpdxDocument");
-            e.printStackTrace();
-            packages = Collections.emptyList();
+    private List<SpdxPackage> getPackages(SpdxDocument spdxDocument) throws InvalidSPDXAnalysisException {
+        final List<SpdxPackage> allPackages = new ArrayList<>();
+        try(@SuppressWarnings("unchecked")
+            Stream<SpdxPackage> allPackagesStream = (Stream<SpdxPackage>) SpdxModelFactory.getElements(spdxDocument.getModelStore(), spdxDocument.getDocumentUri(),
+                spdxDocument.getCopyManager(), SpdxPackage.class)) {
+            allPackagesStream.forEach((SpdxPackage pkg) -> allPackages.add(pkg));
         }
-        return packages;
+        return allPackages;
     }
 
-    private  void importAsReleaseFromSpdxDocument(List<SpdxPackage> packages, AttachmentContent attachmentContent) throws SW360Exception {
+    private  void importAsReleaseFromSpdxDocument(List<SpdxPackage> packages, AttachmentContent attachmentContent) throws SW360Exception, InvalidSPDXAnalysisException {
         for (SpdxPackage spdxElement: packages){
             final Release release = createReleaseFromSpdxPackage(spdxElement);
-            release.setComponentId(importAsComponent(spdxElement).getId());
-            final Relationship[] relationships = spdxElement.getRelationships();
-            List<SpdxBOMImporterSink.Response> releases = importAsReleases(relationships);
-            Map<String, ReleaseRelationship> releaseIdToRelationship = makeReleaseIdToRelationship(releases);
-            release.setReleaseIdToRelationship(releaseIdToRelationship);
-            if (attachmentContent != null) {
-                Attachment attachment = makeAttachmentFromContent(attachmentContent);
-                release.setAttachments(Collections.singleton(attachment));
+            if(isNullEmptyOrWhitespace(release.getVersion())){
+                release.setComponentId(importAsComponent(spdxElement).getId());
+                continue;
+            } else {
+                release.setComponentId(importAsComponent(spdxElement).getId());
+                final Relationship[] relationships = spdxElement.getRelationships().toArray(new Relationship[0]);
+                List<SpdxBOMImporterSink.Response> releases = importAsReleases(relationships);
+                Map<String, ReleaseRelationship> releaseIdToRelationship = makeReleaseIdToRelationship(releases);
+                release.setReleaseIdToRelationship(releaseIdToRelationship);
+                if (attachmentContent != null) {
+                    Attachment attachment = makeAttachmentFromContent(attachmentContent);
+                    release.setAttachments(Collections.singleton(attachment));
+                }
+                final SpdxBOMImporterSink.Response response = sink.addRelease(release);
             }
-            final SpdxBOMImporterSink.Response response = sink.addRelease(release);
         }
     }
 
-    private void importSpdxDocument(String releaseId, SpdxDocument spdxDocument, SpdxPackage spdxPackage) throws SW360Exception, MalformedURLException {
+    private void importSpdxDocument(String releaseId, SpdxDocument spdxDocument, SpdxPackage spdxPackage) throws SW360Exception, MalformedURLException, InvalidSPDXAnalysisException {
         final SPDXDocument spdxDoc = createSPDXDocumentFromSpdxDocument(releaseId, spdxDocument);
         final SpdxBOMImporterSink.Response spdxDocRes = sink.addOrUpdateSpdxDocument(spdxDoc);
         final String spdxDocId = spdxDocRes.getId();
 
         final DocumentCreationInformation docCreationInfo = createDocumentCreationInfoFromSpdxDocument(spdxDocId, spdxDocument);
-        final SpdxBOMImporterSink.Response docCreationInfoRes = sink.addOrUpdateDocumentCreationInformation(docCreationInfo);
-        final String docCreationInfoId = docCreationInfoRes.getId();
+        sink.addOrUpdateDocumentCreationInformation(docCreationInfo);
 
-        List<SpdxPackage> packages = new ArrayList<>();
-        try {
-            packages = spdxDocument.getDocumentContainer().findAllPackages();
-        } catch (InvalidSPDXAnalysisException e) {
-            log.error("Can not get list package from SpdxDocument");
-            e.printStackTrace();
-            packages = Collections.emptyList();
+        final List<SpdxPackage> allPackages = new ArrayList<>();
+        try(@SuppressWarnings("unchecked")
+            Stream<SpdxPackage> allPackagesStream = (Stream<SpdxPackage>) SpdxModelFactory.getElements(spdxDocument.getModelStore(), spdxDocument.getDocumentUri(),
+                spdxDocument.getCopyManager(), SpdxPackage.class)) {
+            allPackagesStream.forEach((SpdxPackage pkg) -> allPackages.add(pkg));
         }
 
         int index = 1;
-        for (SpdxPackage packageElement : packages) {
+        for (SpdxPackage packageElement : allPackages) {
             log.info("Import package: " + packageElement.toString());
             PackageInformation packageInfo = createPackageInfoFromSpdxPackage(spdxDocId, packageElement);
-            if (ArrayUtils.isNotEmpty(packageElement.getRelationships())) {
-                Set<RelationshipsBetweenSPDXElements> packageReleaseRelationship = createRelationshipsFromSpdxRelationships(packageElement.getRelationships(), packageElement.getId());
+            if (packageInfo == null) {
+                continue;
+            }
+            List<Relationship> packageRelationship = List.copyOf(packageElement.getRelationships());
+            if (!packageRelationship.isEmpty()) {
+                Set<RelationshipsBetweenSPDXElements> packageReleaseRelationship = createRelationshipsFromSpdxRelationships(packageRelationship, packageElement.getId());
                 packageInfo.setRelationships(packageReleaseRelationship);
             } else {
                 packageInfo.setRelationships(Collections.emptySet());
@@ -769,11 +824,11 @@ public class SpdxBOMImporter {
                 packageInfo.setIndex(index);
                 index ++;
             }
-            SpdxBOMImporterSink.Response packageInfoRes = sink.addOrUpdatePackageInformation(packageInfo);
+            sink.addOrUpdatePackageInformation(packageInfo);
         }
     }
 
-    private SPDXDocument getSpdxDocumentFromRelease(String releaseId) throws SW360Exception, MalformedURLException {
+    private SPDXDocument getSpdxDocumentFromRelease(String releaseId) throws SW360Exception {
         SPDXDocument spdxDoc;
         final Release release = sink.getRelease(releaseId);
         if (release.isSetSpdxId()) {
@@ -784,7 +839,7 @@ public class SpdxBOMImporter {
         return spdxDoc;
     }
 
-    private DocumentCreationInformation getDocCreationInfoFromSpdxDocument(String spdxDocId) throws SW360Exception, MalformedURLException {
+    private DocumentCreationInformation getDocCreationInfoFromSpdxDocument(String spdxDocId) throws SW360Exception {
         DocumentCreationInformation info;
         final SPDXDocument spdxDoc = sink.getSPDXDocument(spdxDocId);
         if (spdxDoc.isSetSpdxDocumentCreationInfoId()) {
@@ -795,7 +850,7 @@ public class SpdxBOMImporter {
         return info;
     }
 
-    private PackageInformation getPackageInformationFromSpdxDocument(String spdxDocId, String packageName) throws SW360Exception, MalformedURLException {
+    private PackageInformation getPackageInformationFromSpdxDocument(String spdxDocId, String packageName) throws SW360Exception {
         PackageInformation info;
         final SPDXDocument spdxDoc = sink.getSPDXDocument(spdxDocId);
         if (spdxDoc.getSpdxPackageInfoIdsSize() > 0) {
@@ -816,29 +871,29 @@ public class SpdxBOMImporter {
                 .collect(Collectors.toMap(SpdxBOMImporterSink.Response::getId, SpdxBOMImporterSink.Response::getReleaseRelationship));
     }
 
-    private Project creatProjectFromSpdxPackage(SpdxPackage spdxPackage) {
+    private Project creatProjectFromSpdxPackage(SpdxPackage spdxPackage) throws InvalidSPDXAnalysisException {
         Project project = new Project();
-        final String name = spdxPackage.getName();
-        final String version = spdxPackage.getVersionInfo();
+        final String name = getValue(spdxPackage.getName());
+        final String version = getValue(spdxPackage.getVersionInfo());
         project.setName(name);
         project.setVersion(version);
         return project;
     }
 
-    private List<SpdxBOMImporterSink.Response> importAsReleases(Relationship[] relationships) throws SW360Exception {
+    private List<SpdxBOMImporterSink.Response> importAsReleases(Relationship[] relationships) throws SW360Exception, InvalidSPDXAnalysisException {
         List<SpdxBOMImporterSink.Response> releases = new ArrayList<>();
 
-        Map<Relationship.RelationshipType, ReleaseRelationship> typeToSupplierMap = new HashMap<>();
-        typeToSupplierMap.put(Relationship.RelationshipType.CONTAINS,  ReleaseRelationship.CONTAINED);
+        Map<RelationshipType, ReleaseRelationship> typeToSupplierMap = new HashMap<>();
+        typeToSupplierMap.put(RelationshipType.CONTAINS,  ReleaseRelationship.CONTAINED);
 
         for (Relationship relationship : relationships) {
-            final Relationship.RelationshipType relationshipType = relationship.getRelationshipType();
+            final RelationshipType relationshipType = relationship.getRelationshipType();
             if(! typeToSupplierMap.keySet().contains(relationshipType)) {
                 log.debug("Unsupported RelationshipType: " + relationshipType.toString());
                 continue;
             }
 
-            final SpdxElement relatedSpdxElement = relationship.getRelatedSpdxElement();
+            final SpdxElement relatedSpdxElement = relationship.getRelatedSpdxElement().get();
             final Optional<SpdxBOMImporterSink.Response> releaseId = importAsRelease(relatedSpdxElement);
             releaseId.map(response -> {
                 response.setReleaseRelationship(typeToSupplierMap.get(relationshipType));
@@ -859,13 +914,13 @@ public class SpdxBOMImporter {
     }
 
 
-    private Optional<SpdxBOMImporterSink.Response> importAsProject(SpdxElement spdxElement, AttachmentContent attachmentContent) throws SW360Exception {
+    private Optional<SpdxBOMImporterSink.Response> importAsProject(SpdxElement spdxElement, AttachmentContent attachmentContent) throws SW360Exception, InvalidSPDXAnalysisException {
         if (spdxElement instanceof SpdxPackage) {
             final SpdxPackage spdxPackage = (SpdxPackage) spdxElement;
 
             final Project project = creatProjectFromSpdxPackage(spdxPackage);
 
-            final Relationship[] relationships = spdxPackage.getRelationships();
+            final Relationship[] relationships = spdxPackage.getRelationships().toArray(new Relationship[spdxPackage.getRelationships().size()]);
             List<SpdxBOMImporterSink.Response> releases = importAsReleases(relationships);
             Map<String, ProjectReleaseRelationship> releaseIdToProjectRelationship = makeReleaseIdToProjectRelationship(releases);
             project.setReleaseIdToUsage(releaseIdToProjectRelationship);
@@ -884,7 +939,6 @@ public class SpdxBOMImporter {
         }
     }
 
-
     private String verifyOrSetDefault(String value) {
         return (isNotNullEmptyOrWhitespace(value)) ? value : "";
     }
@@ -893,4 +947,25 @@ public class SpdxBOMImporter {
         return (values != null && values.length > 0) ? values : new String[0];
     }
 
+    private String getValue(Optional<String> value) {
+        if (value.isPresent()) {
+            return value.get();
+        } else {
+            return "";
+        }
+    }
+
+    private String getFileType(String fileName) {
+        if (isNullEmptyOrWhitespace(fileName) || !fileName.contains(".")) {
+            log.error("Can not get file type from file name - no file extension");
+            return null;
+        }
+        String ext = fileName.substring(fileName.lastIndexOf(".") + 1).toLowerCase();
+        if ("xml".equals(ext)) {
+            if (fileName.endsWith("rdf.xml")) {
+                ext = "rdf";
+            }
+        }
+        return ext;
+    }
 }
